Table environments {
  id uuid [primary key, default: `uuid_generate_v4()`]
  name varchar [not null]
  logo_url varchar
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  deleted_at timestamp [default: null]
}

Table users {
  id uuid [primary key, default: `uuid_generate_v4()`]
  environment_id uuid [not null]
  name varchar [not null]
  email varchar [not null]
  password varchar [not null]
  profile_picture varchar [default: null]
  role "USER_ROLE" [not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  deleted_at timestamp [default: null]
}

Table teams {
  id uuid [primary key, default: `uuid_generate_v4()`]
  environment_id uuid [not null]
  coach_id uuid [not null]
  name varchar [not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  deleted_at timestamp [default: null]
}

Table team_users {
  id uuid [primary key, default: `uuid_generate_v4()`]
  team_id uuid [not null]
  user_id uuid [not null]
  created_at timestamp [default: `now()`]
  deleted_at timestamp [default: null]
  
  indexes {
    (team_id, user_id, deleted_at) [unique, name: 'unique_active_team_user']
  }
}

Table workouts {
  id uuid [primary key, default: `uuid_generate_v4()`]
  environment_id uuid [not null]
  coach_id uuid [not null]
  name varchar [not null]
  description varchar
  scheduled_at timestamp [not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  deleted_at timestamp [default: null]
}

Table workout_teams {
  id uuid [primary key, default: `uuid_generate_v4()`]
  team_id uuid [not null]
  workout_id uuid [not null]
  created_at timestamp [default: `now()`]
  deleted_at timestamp [default: null]
  
  indexes {
    (team_id, workout_id, deleted_at) [unique, name: 'unique_active_workout_team']
  }
}

Table workout_sections {
  id uuid [primary key, default: `uuid_generate_v4()`]
  workout_id uuid [not null]
  name varchar [not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  deleted_at timestamp [default: null]
}

Table workout_section_series {
  id uuid [primary key, default: `uuid_generate_v4()`]
  workout_section_id uuid [not null]
  distance_in_meters int [not null]
  repetitions int [not null]
  interval_in_seconds integer
  intensity_zone "INTENSITY_ZONE" [not null]
  swimming_type "SWIMMING_TYPE" [not null]
  notes varchar
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  deleted_at timestamp [default: null]
}

enum USER_ROLE {
  ATHLETE
  COACH
  ADMIN
}

enum SWIMMING_TYPE {
  FREESTYLE
  CRAWL
  BACKSTROKE
  BREASTSTROKE
  BUTTERFLY
  MEDLEY
  RELAY
}

enum INTENSITY_ZONE {
  A1
  A2
  A3
  AT
  VO2
}

Ref: "teams"."coach_id" > "users"."id"

Ref: "environments"."id" < "users"."environment_id"

Ref: "environments"."id" < "teams"."environment_id"

Ref: "environments"."id" < "workouts"."environment_id"

Ref: "users"."id" < "workouts"."coach_id"

Ref: "teams"."id" < "team_users"."team_id"

Ref: "users"."id" < "team_users"."user_id"

Ref: "teams"."id" < "workout_teams"."team_id"

Ref: "workouts"."id" < "workout_teams"."workout_id"

Ref: "workouts"."id" < "workout_sections"."workout_id"

Ref: "workout_sections"."id" < "workout_section_series"."workout_section_id"